# lemmy

./: .dockerignore  .drone.yml  .gitignore  .gitlab-ci.yml  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
ansible/: VERSION
ansible/templates/: docker-compose.yml
crates/api/src/: lib.rs  local_user.rs  site.rs
crates/api_common/src/: build_response.rs  community.rs  lib.rs  person.rs  request.rs  site.rs  utils.rs
crates/db_schema/: Cargo.toml
crates/db_schema/src/: lib.rs  utils.rs  (+1 more)
docker/: Dockerfile  iframely.config.local.js  lemmy.hjson
docker/chapo-common/: lemmy-ip-blacklist.conf  nginx-lemmy-common.conf  ssl-chapo.chat.conf
docker/chapo-dev/: backup-dev.sh  docker-compose.yml  lemmy.hjson  lemmydev-up.sh  nginx-lemmy-dev.conf  nginx.conf
docker/chapo-monitor/: docker-compose.yml  docker-stack.yml
docker/chapo-prod/: backup-prod.sh  docker-compose.yml  lemmy.hjson  lemmyprod-up.sh  nginx-lemmy-prod.conf
docker/chapo-tools/: docker-compose.yml
docker/dev/: Dockerfile  docker-compose.yml  docker_update.sh
docker/federation/: docker-compose.yml
docker/hexbear/: docker-compose.dev.yml  docker-compose.yml  lemmy-dev.hjson  lemmy.hjson  nginx.conf
docker/prod/: Dockerfile  docker-compose.yml
docs/src/: about_guide.md  contributing_docker_development.md  contributing_local_development.md  contributing_websocket_http_api.md
infra/: chapo-infra-status.md
migrations/2022-06-03-024735_add_default_communities/: down.sql  up.sql
migrations/2022-06-21-021439_add_local_sticky/: down.sql  up.sql
migrations/2023-05-10-095739_force_enable_undetermined_language/: up.sql
migrations/2023-08-23-182533_scaled_rank/: up.sql
migrations/2023-10-24-030352_change_primary_keys_and_remove_some_id_columns/: up.sql
migrations/2024-02-24-034523_replaceable-schema/: up.sql
migrations/2024-03-24-162000_add_hot_rank_active_function/: down.sql  up.sql
migrations/2024-04-15-162000_fix_hot_rank_active_for_old_posts/: down.sql  up.sql
migrations/2024-12-18-013915_hexbear_userbid/: up.sql
server/: Cargo.toml  build.rs
server/config/: config.hjson  defaults.hjson
server/lemmy_api_structs/: Cargo.toml
server/lemmy_api_structs/src/: comment.rs  community.rs  community_settings.rs  lib.rs  post.rs  post_hexbear.rs  report.rs  site.rs  user.rs
server/lemmy_db/: Cargo.toml
server/lemmy_db/src/: activity.rs  comment.rs  comment_report_view.rs  comment_view.rs  community.rs  community_settings.rs  community_view.rs  lib.rs  moderator.rs  moderator_views.rs  password_reset_request.rs  post.rs  post_report_view.rs  post_view.rs  private_message.rs  report_views.rs  schema.rs  site.rs  site_view.rs  user.rs  user_ban_id.rs  user_mention.rs  user_mention_view.rs  user_tag.rs  user_token.rs  user_view.rs
server/lemmy_rate_limit/: Cargo.toml
server/lemmy_rate_limit/src/: lib.rs  rate_limiter.rs
server/lemmy_utils/: Cargo.toml
server/lemmy_utils/src/: lib.rs  settings.rs
server/migrations/2020-07-05-010644_update_post_aggregates_view/: down.sql  up.sql
server/migrations/2020-07-05-190054_update_community_views/: down.sql  up.sql
server/migrations/2020-07-05-235917_post_view_logged_out/: down.sql  up.sql
server/migrations/2020-07-13-184550_add_community_settings/: up.sql
server/migrations/2020-07-14-040632_create_post_comment_reports/: down.sql  up.sql
server/migrations/2020-07-25-002456_add_create_community_toggle/: down.sql  up.sql
server/migrations/2020-07-27-221947_create_user_tags/: down.sql  up.sql
server/migrations/2020-08-02-020129_create_user_tags/: up.sql
server/migrations/2020-08-02-052800_add_sitemod_column/: down.sql  up.sql
server/migrations/2020-08-03-000110_add_preferred_usernames_banners_and_icons/: down.sql  up.sql
server/migrations/2020-08-24-000736_add-auto-sub-setting/: down.sql  up.sql
server/migrations/2020-09-08-003705_add_chapo_schema_and_deprecate_comment_aggs/: down.sql  up.sql
server/migrations/2020-09-08-200325_add_chapo_post_stats_deprecate_post_aggs/: down.sql  up.sql
server/migrations/2020-09-08-230705_add_chapo_community_stats_deprecate_community_aggs/: down.sql  up.sql
server/migrations/2020-09-09-001614_add_chapo_user_stats_deprecate_user_aggs/: down.sql  up.sql
server/migrations/2020-09-10-160453_fix_hot_rank_stats_triggers/: down.sql  up.sql
server/migrations/2020-09-12-234712_optimize_cross_joined_views/: up.sql
server/migrations/2020-09-16-190406_optimize_more_views/: down.sql  up.sql
server/migrations/2020-09-29-232731_add-featured-posts/: down.sql
server/migrations/2020-10-27-165919_has_2fa/: down.sql  up.sql
server/migrations/2020-10-27-222811_create-user-token-table/: up.sql
server/migrations/2020-10-29-000104_add_inbox_control/: down.sql
server/migrations/2021-03-17-131338_hide_from_main_option/: down.sql  up.sql
server/migrations/2021-03-28-005913_create_ban_id_tables/: up.sql
server/migrations/2021-05-13-171343_comms_to_autosubscribe/: down.sql  up.sql
server/src/: code_migrations.rs  hcaptcha.rs  lib.rs  main.rs  schema.rs  twofactor.rs  version.rs
server/src/api/: claims.rs  comment.rs  community.rs  community_settings.rs  mod.rs  post.rs  post_hexbear.rs  report.rs  site.rs  user.rs
server/src/apub/: activities.rs  activity_queue.rs  community.rs  community_inbox.rs  fetcher.rs  mod.rs  post.rs  private_message.rs  user.rs
server/src/apub/extensions/: group_extensions.rs  signatures.rs
server/src/apub/inbox/: community_inbox.rs  shared_inbox.rs
server/src/apub/inbox/activities/: announce.rs  create.rs  delete.rs  dislike.rs  like.rs  remove.rs  undo.rs  update.rs
server/src/db/: code_migrations.rs  comment.rs  comment_report_view.rs  community.rs  community_settings.rs  mod.rs  post.rs  post_report_view.rs  user.rs
server/src/rate_limit/: rate_limiter.rs
server/src/routes/: api.rs  feeds.rs  images.rs  index.rs  nodeinfo.rs  websocket.rs
server/src/websocket/: chat_server.rs  handlers.rs  messages.rs  mod.rs  server.rs
src/: api_routes.rs  api_routes_http.rs  api_routes_websocket.rs  lib.rs  main.rs  scheduled_tasks.rs
(+63 files in other folders)
