[package]
name = "lemmy_server"
version = "0.0.1"
edition = "2018"

[profile.release]
lto = true

[workspace]
members = [
    "lemmy_utils",
    "lemmy_db"
]

[dependencies]
# Internal deps
lemmy_utils = { path = "./lemmy_utils" }
lemmy_db = { path = "./lemmy_db" }

activitystreams = "0.7.0-alpha.3"
activitystreams-ext = "0.1.0-alpha.2"
actix = "0.10.0-alpha.2"
actix-files = "0.3.0-alpha.1"
actix-rt = "1.1.1"
actix-web = { version = "3.0.0-alpha.3", features = ["rustls"] }
actix-web-actors = "3.0.0-alpha.1"
async-trait = "0.1.36"
awc = "2.0.0-alpha.2"
base64 = "0.12.1"
bcrypt = "0.8.0"
chrono = { version = "0.4.7", features = ["serde"] }
comrak = "0.7"
config = {version = "0.10.1", default-features = false, features = ["hjson"] }
diesel = { version = "1.4.4", features = ["postgres","chrono","r2d2","64-column-tables","serde_json","uuid"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.7.1"
failure = "0.1.8"
futures = "0.3.5"
htmlescape = "0.3.1"
http = "0.2.1"
http-signature-normalization-actix = { version = "0.4.0-alpha.0", default-features = false, features = ["sha-2"] }
itertools = "0.9.0"
jsonwebtoken = "7.0.1"
lazy_static = "1.3.0"
lettre = "0.9.3"
lettre_email = "0.9.4"
log = "0.4.0"
openssl = "0.10"
percent-encoding = "2.1.0"
rand = "0.7.3"
regex = "1.3.5"
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
rss = "1.9.0"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = { version = "1.0.52", features = ["preserve_order"]}
sha2 = "0.9"
strum = "0.18.0"
strum_macros = "0.18.0"
tokio = "0.2.21"
url = { version = "2.1.1", features = ["serde"] }
uuid = { version = "0.6", features = ["serde", "v4"] }
captcha = "0.0.7"
anyhow = "1.0.32"
thiserror = "1.0.20"
