[package]
name = "lemmy_server"
version = "0.0.1"
edition = "2018"
build = "build.rs"

[profile.release]
lto = true

[workspace]
members = [
    "lemmy_utils",
    "lemmy_db",
    "lemmy_api_structs",
    "lemmy_rate_limit",
]

[dependencies]
# Internal deps
lemmy_utils = { path = "./lemmy_utils" }
lemmy_db = { path = "./lemmy_db" }
lemmy_api_structs = { path = "./lemmy_api_structs" }
lemmy_rate_limit = { path = "./lemmy_rate_limit" }

activitystreams = "0.7.0-alpha.11"
activitystreams-ext = "0.1.0-alpha.2"
actix = "0.12.0"
actix-cors = "0.5.4"
actix-files = "0.6.0-beta.6"
actix-rt = "2.2.0"
actix-web = { version = "4.0.0-beta.8", features = ["rustls"] }
actix-web-actors = "4.0.0-beta.6"
anyhow = "1.0.41"
async-trait = "0.1.50"
awc = "3.0.0-beta.7"
background-jobs = "0.9.0"
base64 = "0.13.0"
bcrypt = "0.10.0"
captcha = "0.0.8"
chrono = { version = "0.4.19", features = ["serde"] }
comrak = "0.10.1"
config = { version = "0.11.0", default-features = false, features = ["hjson"] }
diesel = { version = "1.4.7", features = ["postgres","chrono","r2d2","64-column-tables","serde_json","uuidv07"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
enumflags2 = "0.7.1"
env_logger = "0.8.4"
failure = "0.1.8"
futures = "0.3.15"
htmlescape = "0.3.1"
http = "0.2.4"
http-signature-normalization-actix = { version = "0.5.0-beta.6", default-features = false, features = ["sha-2"] }
itertools = "0.10.1"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
lettre = "0.9.6"
lettre_email = "0.9.4"
log = "0.4.14"
openssl = "0.10.35"
percent-encoding = "2.1.0"
rand = "0.8.4"
regex = "1.5.4"
reqwest = { version = "0.11.4", features = ["json"] }
rss = "1.10.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["preserve_order"] }
sha2 = "0.9.5"
strum = "0.21.0"
strum_macros = "0.21.1"
thiserror = "1.0.25"
tokio = "1.7.1"
ttl_cache = "0.5.1"
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "=0.7.4", features = ["serde", "v4"] }

[build-dependencies]
vergen = "5.1.11"
