[package]
name = "lemmy_api_structs"
version = "0.1.0"
authors = ["Felix Ableitner <me@nutomic.com>"]
edition = "2018"

[lib]
name = "lemmy_api_structs"
path = "src/lib.rs"

[dependencies]
lemmy_db = { path = "../lemmy_db" }

chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.28"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
