[package]
name = "lemmy_db"
version = "0.1.0"
edition = "2018"

[lib]
name = "lemmy_db"
path = "src/lib.rs"

[dependencies]
diesel = { version = "1.4.7", features = ["postgres","chrono","r2d2","64-column-tables","serde_json","uuidv07"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = { version = "1.0.64", features = ["preserve_order"] }
strum = "0.21.0"
strum_macros = "0.21.1"
log = "0.4.14"
sha2 = "0.9.5"
bcrypt = "0.10.0"
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "=0.7.4", features = ["serde", "v4"] }
lazy_static = "1.4.0"
regex = "1.5.4"
