[package]
name = "lemmy_rate_limit"
version = "0.1.0"
authors = ["Felix Ableitner <me@nutomic.com>"]
edition = "2018"

[lib]
name = "lemmy_rate_limit"
path = "src/lib.rs"

[dependencies]
lemmy_utils = { path = "../lemmy_utils" }
lemmy_api_structs = { path = "../lemmy_api_structs" }
tokio = "1.10.1"
strum = "0.21.0"
strum_macros = "0.21.1"
futures = "0.3.17"
actix-web = { version = "4.0.0-beta.8", features = ["rustls"] }
log = "0.4.14"
