[package]
name = "lemmy_utils"
version = "0.1.0"
edition = "2018"

[lib]
name = "lemmy_utils"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
config = { version = "0.11.0", default-features = false, features = ["hjson"] }
chrono = { version = "0.4.19", features = ["serde"] }
lettre = "0.9.6"
lettre_email = "0.9.4"
log = "0.4.14"
itertools = "0.10.1"
rand = "0.8.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.67", features = ["preserve_order"] }
comrak = "0.11.0"
lazy_static = "1.4.0"
openssl = "0.10.36"
url = { version = "2.2.2", features = ["serde"] }
actix-web = "4.0.0-beta.8"
anyhow = "1.0.43"
